--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,7 @@ h2{font-size: 2.4rem; text-align: center;}
 
 @media screen and (max-width: 414px){
   .header {padding: 0;}
+  .doctor .dialog{right:-65px}
 span.logo{ margin: 10px 0 10px; width: 180px; }
 .doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
 .logline{top:130px; right:90px}
