--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ h2{font-size: 2.6rem;}
    .title {width: 100%;}
    .title h1{ font-size: 10rem; text-align: right;padding-right: 50px;}
   .doctor{ margin-left:-28% ;  width:100%; z-index: 2; margin-top: -33%; }
-  .doctor .dialog{top:35%; right:-18%}
+  .doctor .dialog{top:35%; right:-70px}
 .mobile_kv{ padding: 20px  30px 50px; background: linear-gradient(0deg, rgba(4,195,187,1) 0%, rgba(3,172,165,1) 50%);}
 h2{font-size: 2.4rem; text-align: center;}
 .mobile_kv h2{color:#eaff00 ;   }
@@ -454,7 +454,7 @@ h2{font-size: 2.4rem; text-align: center;}
 
 @media screen and (max-width: 414px){
   .header {padding: 0;}
-  .doctor .dialog{right:-65px}
+
 span.logo{ margin: 10px 0 10px; width: 180px; }
 .doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
 .logline{top:130px; right:90px}
