--- a/css/style.css
+++ b/css/style.css
@@ -454,8 +454,8 @@ h2{font-size: 2.4rem; text-align: center;}
 
 @media screen and (max-width: 414px){
   .header {padding: 0;}
-.doctor{position: relative  !important;}
-.doctor .dialog{top:35%; right:-18%; position: absolute !important;}
+
+.doctor .dialog{top:35%; right:0;}
 span.logo{ margin: 10px 0 10px; width: 180px; }
 .doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
 .logline{top:130px; right:90px}
