--- a/css/style.css
+++ b/css/style.css
@@ -455,11 +455,10 @@ h2{font-size: 2.4rem; text-align: center;}
 @media screen and (max-width: 414px){
   .header {padding: 0;}
 
-.doctor .dialog{top:35%; right:0;}
 span.logo{ margin: 10px 0 10px; width: 180px; }
 .doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
 .logline{top:130px; right:90px}
-.warn h3{padding: 20px 0 18px 35px;margin-top: 22px; width:68%; font-size: 1.375rem;\ }
+.warn h3{padding: 20px 0 18px 35px;margin-top: 22px; width:68%; font-size: 1.375rem;}
 .warn .icon{width: 110px; position: absolute !important;}
 .container{border-radius: 10px;}
 .owl-theme .owl-dots{margin-top: 0;}
