--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ span.logo{ margin: 10px 0 10px; width: 180px; }
 .doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
 .logline{top:130px; right:90px}
 .warn h3{padding: 20px 0 18px 35px;margin-top: 22px; width:68%; font-size: 1.375rem;}
-.warn .icon{width: 110px; position: absolute !important;}
+.warn .icon{width: 110px; }
 .container{border-radius: 10px;}
 .owl-theme .owl-dots{margin-top: 0;}
 .owl-theme .owl-dots .owl-dot span{width: 8px; height: 8px;}
