--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ image-rendering: crisp-edges;
 .title h2{color:#eaff00;font-size: 4.5rem; border-bottom: 1px solid #fff;font-weight: 900; margin-bottom: 20px; padding-bottom: 20px;}
 .title p{ color:#fff;font-size: 1.25rem;margin-top: 20px;}
 
-.doctor{margin-left: -10%; position: relative;  width: 65%;}
-.doctor .dialog{position: absolute; right:50px;top:50px; }
+.doctor{margin-left: -10%;  width: 65%;}
+.doctor .dialog{position: absolute; right:100px;top:50px; }
 .doctor .dialog p{color:#fff;writing-mode: vertical-rl; font-weight: 700;font-size: 2rem; line-height: 1.2; display: block; border:3px solid #fff; border-radius: 5px; padding:20px 15px;}
 .doctor .dialog p strong{color:#eaff00;}
 .logline{ width: 3px; height:50px; background-color: #fff; position: absolute; transform: rotate(60deg); top:230px;right:131px }
@@ -250,7 +250,7 @@ image-rendering: crisp-edges;
   .title p{font-size:1rem ;}
   p{font-size: 1rem;}
   .doctor .dialog p{ font-size: 1.5rem;}
-  .logline{right: 109px;}
+  .logline{right: 112px;}
   .logo{width: 220px;}  
  .contain{ padding: 0 40px;}
 #chaos .contain{padding: 0 30px;}
@@ -264,7 +264,7 @@ image-rendering: crisp-edges;
 .item a{font-size: 1rem;}
 .tab_container h3{font-size: 2rem;}
 .contact_group li a{font-size: 1.125rem;}
-
+.doctor .dialog{top:50px; right:50px}
 }
 
 
@@ -324,7 +324,8 @@ h2{font-size: 2.6rem;}
   .title h1{font-size:5rem;}
   .title h2{font-size: 2rem;}
   .title{padding-bottom: 20px;}
-  .doctor .dialog{top:10px; right:20px}
+  .doctor .dialog{top:10px; right:50px}
+  .logline{right: 109px;}
   .title p{margin-top: 10px; font-size: 0.93rem;}
   .title h2{margin-bottom: 10px;padding-bottom: 10px;}
   .doctor .dialog p{font-size: 1.4rem;}
@@ -354,7 +355,7 @@ h2{font-size: 2.6rem;}
    .title {width: 100%;}
    .title h1{ font-size: 10rem; text-align: right;padding-right: 50px;}
   .doctor{ margin-left:-28% ;  width:100%; z-index: 2; margin-top: -33%; }
-  .doctor .dialog{top:35%; right:-18%;}
+  .doctor .dialog{top:50%; right:40px;}
 .mobile_kv{ padding: 20px  30px 50px; background: linear-gradient(0deg, rgba(4,195,187,1) 0%, rgba(3,172,165,1) 50%);}
 h2{font-size: 2.4rem; text-align: center;}
 .mobile_kv h2{color:#eaff00 ;   }
