--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ h2{font-size: 2.4rem; text-align: center;}
   .header {padding: 0;}
 
 span.logo{ margin: 10px 0 10px; width: 180px; }
-.doctor .dialog p{font-size: 1.2rem; padding:15px 10px;}
+.doctor .dialog p{font-size: 1.2rem; padding:15px 10px; display: block;}
 .logline{top:130px; right:90px}
 .warn h3{padding: 20px 0 18px 35px;margin-top: 22px; width:68%; font-size: 1.375rem;}
 .warn .icon{width: 110px; }
