--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ image-rendering: crisp-edges;
 .navigation li a:hover{ color: #333; }
 
 /*----- kv -----*/
-#kv{padding-top: 70px;}
+#kv{padding-top: 70px; position: relative;}
 .title{ width: 45%;  z-index: 2; padding-left: 30px;}
 .title h1{font-size:10.625rem ; color: #fff; font-weight: 900; line-height: 1.1;}
 .title h2{color:#eaff00;font-size: 4.5rem; border-bottom: 1px solid #fff;font-weight: 900; margin-bottom: 20px; padding-bottom: 20px;}
