--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap');
-
-
 /* CSS Reset */
 *{ margin: 0; padding: 0; 
 -webkit-box-sizing: border-box;
@@ -611,7 +608,6 @@ span.logo{ margin: 10px 0 10px; width: 180px; }
 
 /*----- footer -----*/
 .footer{ padding: 30px 0; background: #04c3bb; }
-#commonhealth_footer {}
 .commonhealth_footer-channel {
   width: 100%;
   font-size: 0.9375rem;
@@ -660,7 +656,7 @@ span.logo{ margin: 10px 0 10px; width: 180px; }
   color: #000;
 }
 .commonhealth_footer-copyright {
-  color: ##11615;
+  color: #1d1615;
   font-size: 0.875rem;
   font-size: 14px;
   text-align: center;
