--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,8 @@ image-rendering: crisp-edges;
 .s3_title p{color:#fff; margin-top: 20px; font-weight: 700;  font-size: 1.25rem; }
 .s3_title p span{color: #eaff00;}
 .instruct{text-align: center;}
-.instruct p{color:#f9ffb7; font-weight: bold;text-align: center; margin-top: 20px; }
-.instruct p .arrow { border: solid #f9ffb7; border-width: 0 3px 3px 0; display: inline-block; padding: 3px;animation:down .6s linear infinite   ;}
+.instruct p{color:#e80000; font-weight: bold;text-align: center; margin-top: 20px; }
+.instruct p .arrow { border: solid #e80000; border-width: 0 3px 3px 0; display: inline-block; padding: 3px;animation:down .6s linear infinite   ;}
 @keyframes down {
   0% { transform: translateY(-10px) rotate(45deg);}
   100% {transform: translateY(0) rotate(45deg);}
