--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -79,7 +79,11 @@
     opacity: 0; }
   .owl-carousel.owl-refresh .owl-item {
     visibility: hidden; }
+
+    .owl-carousel .owl-stage{ display:flex;     align-items: stretch;}
+ 
   .owl-carousel.owl-drag .owl-item {
+ 
     -ms-touch-action: pan-y;
         touch-action: pan-y;
     -webkit-user-select: none;
@@ -92,7 +96,7 @@
   .owl-carousel.owl-rtl {
     direction: rtl; }
   .owl-carousel.owl-rtl .owl-item {
-    float: right; }
+    float: right;}
 
 /* No Js */
 .no-js .owl-carousel {
