--- a/css/style.css
+++ b/css/style.css
@@ -79,22 +79,23 @@ image-rendering: crisp-edges;
 .s1_title h2 span.turn,.s2_title h2 span.turn{margin-left: 30px; transform: rotate(180deg); }
 .s1_doll{width:22%; margin-top: -20px;}
 
-.warn {width: 50%; margin-top: 40px; padding-left:5%; float: left; cursor: pointer; }
+.warn {width: 50%; margin-top: 40px; padding-left:5%; float: left;  }
 .warn .icon{max-width: 167px; float:left; z-index: 2; position: relative;transition: .5s;}
 .warn h3{  z-index: 1;display: block ; background-color:#eaff00 ;border-radius: 0 50px 50px 0; font-size: 1.875rem; float:left; padding:30px 0px 30px 50px; width:60%; margin-top: 40px; margin-left:-20px; }
+.warn a{ color:#333; display: block; height: 100%;}
 .s1_box{ padding:  0  50px 60px; }
 .s1_box.flex{align-items: start;}
-.warn h3 span{transition: .5s;display: inline-block; background-color: #fff; border-radius: 15px; color:#000; width: 50px; height: 50px; text-align: center; font-size:2rem ; cursor: pointer; font-weight:normal; float: right; margin-right: 30px;}
+.warn h3 span{transition: .5s;display: inline-block; background-color: #fff; border-radius: 15px; color:#000; width: 50px; height: 50px; text-align: center; font-size:2rem ;font-weight:normal; float: right; margin-right: 30px;}
 .warn p{ padding-top: 20px;padding-right: 60px; }
 .warn h3 span::before{content:"+"}
 .warn h3 span.altText::before{content:"-"}
-.warn:hover{color:#09aba7; transition: .5s;}
+.warn:hover a{color:#09aba7; transition: .5s;}
 .warn:hover h3 span{background-color:rgba(255, 255, 255, .85) ; transition: .5s ;}
 .warn:hover .icon{ transform: scale(.92); transition: .5s;}
 .hide{display: none;}
 
-/*----- knowhow -----*/
-#knowhow{ background-color:#e2f2f1 ;}
+/*----- revolution -----*/
+#revolution{ background-color:#e2f2f1 ;}
 .s2_box{ padding-bottom: 80px; margin-top: 50px;}
 .s2_doll{width:20%; margin-top: -30px; margin-right: 30px;}
 .timeline,.doctor_video{width: 50%;}
@@ -185,10 +186,12 @@ image-rendering: crisp-edges;
 #article h2{color:#Fff; text-align: center;}
 #article .tabbox{ margin: 40px 0;}
 #article .slide-content{padding: 0 80px;}
-.item {border-radius: 20px; overflow: hidden; background-color: #fff; cursor: pointer;}
-.item h3{ font-size: 1.5rem; padding: 30px 40px 20px; color:#555; text-align: justify;}
-.item a{ color:#fff; background-color: #ff6f28; text-align: center; border-radius: 20px; padding: 5px 30px; display: inline-block; margin: 0 auto; font-size: 1.125rem;}
-.item .linka{text-align: center; margin-bottom: 30px;}
+.item {border-radius: 20px; overflow: hidden; background-color: #fff; cursor: pointer; height: 100%; padding-bottom: 75px;}
+.item h3{ font-size: 1.5rem; padding: 30px 40px 20px; color:#555; text-align: justify; display: block;}
+.item a{color:#fff; background-color: #ff6f28; text-align: center; border-radius: 20px; padding: 5px 30px; display: inline-block; margin: 0 auto; font-size: 1.125rem;
+}
+
+.item .linka{text-align: center;  bottom:30px; left: 0; position: absolute; width: 100%; }
 .item:hover a{ background-color: #333;}
 .item:hover { background-color: #fff6e5;}
 
